// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiStepHorizontal is rendered 1`] = `
<div
  aria-disabled="false"
  aria-label="aria-label"
  aria-selected="false"
  class="euiStepHorizontal testClass1 testClass2 euiStepHorizontal-isIncomplete"
  data-test-subj="test subject string"
  role="tab"
  tabindex="0"
  title="Step 1: undefined"
>
  <div
    class="euiScreenReaderOnly"
  >
    Step
  </div>
  <div
    class="euiStepNumber euiStepNumber--incomplete euiStepHorizontal__number"
  >
    1
  </div>
  <div
    class="euiStepHorizontal__title"
  />
</div>
`;

exports[`EuiStepHorizontal props isComplete 1`] = `
<div
  aria-disabled="false"
  aria-selected="false"
  class="euiStepHorizontal euiStepHorizontal-isComplete"
  role="tab"
  tabindex="0"
  title="Step 1: undefined is complete"
>
  <div
    class="euiScreenReaderOnly"
  >
    Step
  </div>
  <div
    class="euiStepNumber euiStepNumber--complete euiStepHorizontal__number"
  >
    <svg
      aria-label="complete"
      class="euiIcon euiIcon--medium euiIcon-isLoading euiStepNumber__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
  <div
    class="euiStepHorizontal__title"
  />
</div>
`;

exports[`EuiStepHorizontal props isSelected 1`] = `
<div
  aria-disabled="false"
  aria-selected="true"
  class="euiStepHorizontal euiStepHorizontal-isSelected"
  role="tab"
  tabindex="0"
  title="Step 1: undefined"
>
  <div
    class="euiScreenReaderOnly"
  >
    Step
  </div>
  <div
    class="euiStepNumber euiStepHorizontal__number"
  >
    1
  </div>
  <div
    class="euiStepHorizontal__title"
  />
</div>
`;

exports[`EuiStepHorizontal props status complete is rendered 1`] = `
<div
  aria-disabled="false"
  aria-selected="false"
  class="euiStepHorizontal euiStepHorizontal-isIncomplete"
  role="tab"
  tabindex="0"
  title="Step 1: undefined"
>
  <div
    class="euiScreenReaderOnly"
  >
    Step
  </div>
  <div
    class="euiStepNumber euiStepNumber--complete euiStepHorizontal__number"
  >
    <svg
      aria-label="complete"
      class="euiIcon euiIcon--medium euiIcon-isLoading euiStepNumber__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
  <div
    class="euiStepHorizontal__title"
  />
</div>
`;

exports[`EuiStepHorizontal props status danger is rendered 1`] = `
<div
  aria-disabled="false"
  aria-selected="false"
  class="euiStepHorizontal euiStepHorizontal-isIncomplete"
  role="tab"
  tabindex="0"
  title="Step 1: undefined"
>
  <div
    class="euiScreenReaderOnly"
  >
    Step
  </div>
  <div
    class="euiStepNumber euiStepNumber--danger euiStepHorizontal__number"
  >
    <svg
      aria-label="has errors"
      class="euiIcon euiIcon--medium euiIcon-isLoading euiStepNumber__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
  <div
    class="euiStepHorizontal__title"
  />
</div>
`;

exports[`EuiStepHorizontal props status disabled is rendered 1`] = `
<div
  aria-disabled="false"
  aria-selected="false"
  class="euiStepHorizontal euiStepHorizontal-isIncomplete"
  role="tab"
  tabindex="0"
  title="Step 1: undefined"
>
  <div
    class="euiScreenReaderOnly"
  >
    Step
  </div>
  <div
    class="euiStepNumber euiStepNumber--disabled euiStepHorizontal__number"
  >
    1
  </div>
  <div
    class="euiStepHorizontal__title"
  />
</div>
`;

exports[`EuiStepHorizontal props status incomplete is rendered 1`] = `
<div
  aria-disabled="false"
  aria-selected="false"
  class="euiStepHorizontal euiStepHorizontal-isIncomplete"
  role="tab"
  tabindex="0"
  title="Step 1: undefined"
>
  <div
    class="euiScreenReaderOnly"
  >
    Step
  </div>
  <div
    class="euiStepNumber euiStepNumber--incomplete euiStepHorizontal__number"
  >
    1
  </div>
  <div
    class="euiStepHorizontal__title"
  />
</div>
`;

exports[`EuiStepHorizontal props status warning is rendered 1`] = `
<div
  aria-disabled="false"
  aria-selected="false"
  class="euiStepHorizontal euiStepHorizontal-isIncomplete"
  role="tab"
  tabindex="0"
  title="Step 1: undefined"
>
  <div
    class="euiScreenReaderOnly"
  >
    Step
  </div>
  <div
    class="euiStepNumber euiStepNumber--warning euiStepHorizontal__number"
  >
    <svg
      aria-label="has warnings"
      class="euiIcon euiIcon--medium euiIcon-isLoading euiStepNumber__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
  <div
    class="euiStepHorizontal__title"
  />
</div>
`;

exports[`EuiStepHorizontal props step 1`] = `
<div
  aria-disabled="false"
  aria-selected="false"
  class="euiStepHorizontal euiStepHorizontal-isIncomplete"
  role="tab"
  tabindex="0"
  title="Step 5: undefined"
>
  <div
    class="euiScreenReaderOnly"
  >
    Step
  </div>
  <div
    class="euiStepNumber euiStepNumber--incomplete euiStepHorizontal__number"
  >
    5
  </div>
  <div
    class="euiStepHorizontal__title"
  />
</div>
`;

exports[`EuiStepHorizontal props title 1`] = `
<div
  aria-disabled="false"
  aria-selected="false"
  class="euiStepHorizontal euiStepHorizontal-isIncomplete"
  role="tab"
  tabindex="0"
  title="Step 1: First step"
>
  <div
    class="euiScreenReaderOnly"
  >
    Step
  </div>
  <div
    class="euiStepNumber euiStepNumber--incomplete euiStepHorizontal__number"
  >
    1
  </div>
  <div
    class="euiStepHorizontal__title"
  >
    First step
  </div>
</div>
`;
